# pgbar

./: .gitignore  CMakeLists.txt  Makefile  README.md
constants/: constants_template.json
include/: constants.h  mvn.h  param.h  particle.h  reparam.h  utils.h
pipelines/: test
src/: analyze_data.cxx  analyze_valid.cxx  constants.cpp  generate.cxx  generate_doubles.cxx  generate_doubles2.cxx  main.cxx  mvn.cpp  param.cpp  particle.cpp  reparam.cpp  test.cxx  utils.cpp
webtools/: SMC_make_summary.R  import_df.js  rInspectSamples.html
